# LaVOUS

./: .gitignore  AGENTS.md  README.md  pyproject.toml
analysis/b-cell/dowser/: README.md  convert_to_airr.py  run_ighg1_vs_igha1_joint.slurm  run_ighg1_vs_igha1_reconstruct_xbp1_jchain.sh  run_ighg1_vs_igha1_sim_each.slurm
analysis/expression_simulation/: plot_diff.py  plot_sim-vs-reconst.py  run_reconst.sh  run_simulation.sh
analysis/expression_simulation/diff/: diff_Base_meta.json  diff_Base_model-params.tsv  diff_Theta1_model-params.tsv  diff_r0_meta.json  diff_r0_model-params.tsv  diff_rL_meta.json  diff_t3r0_chi-squared.tsv  diff_t3r0_model-params.tsv  diff_t3r50_chi-squared.tsv  diff_t3r50_meta.json  diff_t5r0_chi-squared.tsv  diff_t5r50_meta.json  diff_t5r5_chi-squared.tsv  diff_t5r5_meta.json  diff_t5r5_model-params.tsv  diff_t7r50_model-params.tsv  diff_t7r5_chi-squared.tsv
analysis/expression_simulation/evogenex/: egx_Base.csv  egx_t7r5.csv  regime0_t3r50.csv
analysis/expression_simulation/heritability/: heritability_AlphaL.tsv  heritability_AlphaS.tsv  heritability_rL.tsv  (+6 more)
analysis/lineage_simulation/: run_lineage.sh  sampld_calls.txt  tree_egx.nwk
analysis/lung_cancer/: run_vine_preprocess.slurm
brain/scripts/: plot_e15_rep1_fp_pseudotime_correlations.py
docs/: source_map.md
examples/input_data/: readcounts_demo.tsv
examples/output_results/: diff_chi-squared.tsv  diff_h0_q-mean-std_0.tsv  diff_h1_q-mean-std_0.tsv  diff_meta.json  diff_model-params.tsv  heritability.tsv  history_gene2.tsv
expression_simulation/: plot_sim-vs-reconst.py  run_diff.sh  run_heritability.sh  run_shuffle.sh
expression_simulation/diff/: diff_Base_chi-squared.tsv  diff_Theta1_chi-squared.tsv  diff_Theta1_meta.json  diff_r0_chi-squared.tsv  diff_rL_chi-squared.tsv  diff_rL_model-params.tsv  diff_t3r0_meta.json  diff_t3r50_model-params.tsv  diff_t5r0_meta.json  diff_t5r0_model-params.tsv  diff_t5r50_chi-squared.tsv  diff_t5r50_model-params.tsv  diff_t7r0_chi-squared.tsv  diff_t7r0_meta.json  diff_t7r0_model-params.tsv  diff_t7r50_chi-squared.tsv  diff_t7r50_meta.json  diff_t7r5_meta.json  diff_t7r5_model-params.tsv
expression_simulation/evogenex/: egx_Theta1.csv  egx_r0.csv  egx_rL.csv  egx_t3r0.csv  egx_t3r50.csv  egx_t5r0.csv  egx_t5r5.csv  egx_t5r50.csv  egx_t7r0.csv  egx_t7r50.csv  run_evogenex.sh
expression_simulation/heritability/: heritability_AlphaL_shuffled.tsv  heritability_BM.tsv  heritability_BM_shuffled.tsv  heritability_Base.tsv  heritability_Sigma.tsv  heritability_Sigma_shuffled.tsv  heritability_Theta1_shuffled.tsv  heritability_Thetas.tsv  heritability_r0.tsv  heritability_r0_shuffled.tsv  heritability_rL_shuffled.tsv  plot_plasticity_results.py
expression_simulation/reconst/: history_Base_gene500.tsv  history_Theta1_gene500.tsv  history_r0_gene500.tsv  history_t5r0_gene500.tsv  history_t5r50_gene500.tsv  history_t5r5_gene500.tsv  history_t7r50_gene500.tsv
expression_simulation/simulation/: readcounts_AlphaL.tsv  readcounts_AlphaL_shuffled.tsv  readcounts_AlphaS_shuffled.tsv  readcounts_BM.tsv  readcounts_BM_shuffled.tsv  readcounts_Base_shuffled.tsv  readcounts_Sigma.tsv  readcounts_Theta1.tsv  readcounts_Theta1_shuffled.tsv  readcounts_Thetas_shuffled.tsv  readcounts_r0_shuffled.tsv  readcounts_rL_shuffled.tsv  readcounts_rS.tsv  readcounts_rS_shuffled.tsv  readcounts_t5r0.tsv  readcounts_t5r5.tsv  readcounts_t5r50.tsv  readcounts_t7r0.tsv  readcounts_t7r5.tsv  sim_history_Base.tsv  sim_history_Sigma.tsv  sim_history_Thetas.tsv  sim_history_r0.tsv  sim_history_t3r0.tsv  sim_history_t5r0.tsv  sim_history_t5r50.tsv  sim_history_t7r5.tsv
lineage_simulation/: plot_regime_circle.py  regime.csv  regime_mrca.csv  run_lineage.sh  tree.nwk
singlecellstochastics/: calibrate.py  ou_diff.py  reconstruct.py  stochas_sim.py
source/: defaults.py  likelihood.py  optimize.py
supplementary_figures/chi_square_vs_empirical_null/: caption.md  plot_chisq_vs_empirical_null.py
supplementary_figures/elbo_importance_sampling_quality/: README.md  caption.md  plot_elbo_importance_sampling_quality.py  source_data.tsv
supplementary_figures/ou_vi_parameter_recovery/: caption.md  ou_parameter_summary.tsv  plot_ou_vi_parameter_recovery.py  vi_parameter_summary.tsv
supplementary_figures/r5_chisq_vs_empirical_calls/: caption.md  plot_r5_chisq_vs_empirical_q_distributions.py  source_data.tsv
supplementary_figures/reconstruction_vs_simulated_expression/: caption_theta1_regime_distance.md  plot_reconstruction_vs_simulated_expression.py  plot_theta1_regime_distance_reconstruction.py  source_data.tsv  summary.tsv  theta1_regime_distance_error_bins.tsv  theta1_regime_distance_source_data.tsv  theta1_regime_distance_summary.tsv
(+203 files in other folders)
